--- a/assets/styles/style.index.css
+++ b/assets/styles/style.index.css
@@ -1,12 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+20+Charted&display=swap');
 
-jersey-20-charted-regular {
-    font-family: "Jersey 20 Charted", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body {
+    font-family: "Jersey 20", sans-serif;
+    background-color: rgba(5, 146, 253, 0.678)
+}
+h1 {
+    text-align: center;
+}
+header {
+    display:flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    height: 150px;
+    background-color: rgb(0, 81, 255);
+    color: rgb(255, 221, 0);
+    align-items: center;
+}
+#logo-img {
+    height: 120px;
+    width: 125px;
+    border-radius: 50%;
+}
+#link {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+#link a {
+    text-decoration: none;
+    color: rgb(244, 242, 241);
+    font-size: 1.2rem;
+    border-bottom: 3px solid transparent;
+    border-radius: 6px;
+}
+#link a:hover {
+    border-bottom: 3px solid #fff200;
+    color: rgb(255, 221, 0);
+    transform: scale(1.2);
 }
