--- a/assets/styles/style.index.css
+++ b/assets/styles/style.index.css
@@ -7,7 +7,7 @@
 }
 body {
     font-family: "Jersey 20", sans-serif;
-    background-color: rgba(5, 146, 253, 0.678)
+    background-color: rgba(231, 127, 22, 0.89);
 }
 h1 {
     text-align: center;
@@ -16,14 +16,14 @@ header {
     display:flex;
     justify-content: space-around;
     height: 150px;
-    background-color: rgb(0, 81, 255);
-    color: rgb(255, 221, 0);
+    background-color: rgb(6, 5, 5);
+    color: rgb(255, 106, 0);
     align-items: center;
 }
 #logo-img {
     height: 120px;
     width: 125px;
-    border-radius: 50%;
+    border-radius: 1px;
 }
 #link {
     display: flex;
@@ -38,7 +38,39 @@ header {
     border-radius: 6px;
 }
 #link a:hover {
-    border-bottom: 3px solid #fff200;
-    color: rgb(255, 221, 0);
+    border-bottom: 3px solid #ff7b00;
+    color: rgb(240, 108, 0);
     transform: scale(1.2);
+}
+#carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background-color: aliceblue;
+}
+#carousel img {
+    height: 100%;
+    width: 100%;
+    border-radius: 12px;
+    object-fit: cover;
+    padding: 20px;
+}
+
+#main-new {
+    width: 70%;
+    background-color: #c1b6a9;
+    margin: 20px auto;
+    padding: 40px;
+}
+
+#aside {
+    width: 40%;
+    background-color: #221d17;
+    margin: 20px;
+    padding: 20px;
+}
+main {
+    display: flex;
+    justify-content: space-around;
 }
